--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.0",
+    "dotenv": "^16.0.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
